[gd_scene load_steps=7 format=2]

[ext_resource path="res://levels/player_ui.gd" type="Script" id=1]
[ext_resource path="res://pickups/runes/ice.png" type="Texture" id=2]
[ext_resource path="res://levels/wizard_sprites.tscn" type="PackedScene" id=4]
[ext_resource path="res://pickups/heart.png" type="Texture" id=5]
[ext_resource path="res://pickups/runes/arcane.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 46.5, 20 )

[node name="P1UI" type="Control"]
margin_right = 93.0
margin_bottom = 41.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 93.0
margin_bottom = 41.0
color = Color( 0, 0, 0, 0.25098 )

[node name="UIArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="UIArea"]
position = Vector2( 46.5, 20 )
shape = SubResource( 8 )

[node name="Portrait" type="Control" parent="."]
margin_right = 41.0
margin_bottom = 41.0
rect_clip_content = true

[node name="WizardSprites" parent="Portrait" instance=ExtResource( 4 )]
position = Vector2( 22, 10 )
scale = Vector2( 3, 3 )

[node name="Health1" type="TextureRect" parent="."]
margin_left = 39.0
margin_top = -3.0
margin_right = 103.0
margin_bottom = 61.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
texture = ExtResource( 5 )

[node name="Health2" type="TextureRect" parent="."]
margin_left = 65.0
margin_top = -3.0
margin_right = 129.0
margin_bottom = 61.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
texture = ExtResource( 5 )

[node name="Element1" type="TextureRect" parent="."]
margin_left = 40.0
margin_top = 16.0
margin_right = 104.0
margin_bottom = 80.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="Element2" type="TextureRect" parent="."]
margin_left = 66.0
margin_top = 16.0
margin_right = 130.0
margin_bottom = 80.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[connection signal="body_entered" from="UIArea" to="." method="_on_UIArea_body_entered"]
[connection signal="body_exited" from="UIArea" to="." method="_on_UIArea_body_exited"]
